# mocking-demo

./: LICENSE  README.md  pyproject.toml
easy_outfit/: classes.py
outfit_picker/: functions.py
tests/: test_exception_handling.py  test_outfit_logic.py  test_outfit_logic_classes.py  test_outfit_logic_functions.py  test_parameters.py
